--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body{
     font-size: 15px;
 }
 .page-header{
-    height: 20vh;
     position: sticky;
     -webkit-box-shadow: 0px 0px 12px 0px rgba(186,180,186,1);
     -moz-box-shadow: 0px 0px 12px 0px rgba(186,180,186,1);
@@ -27,21 +26,27 @@ body{
     overflow: hidden;
 }
 
-.wrapper{
-    width: 100%;
+.fxtopbar{
     padding: 16px 0 0;
+}
+
+.wrapper{
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
 .padd{
     padding-top: 24px;
 }
 .wrap-header{
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 24px 0 24px;
 }
+
+
 
 .text{
     font-family: inherit;
@@ -68,10 +73,11 @@ body{
 
 .menu{
     display: flex;
+    align-items: center;
     list-style: none;
 }
 
-li{
+.link-list{
     margin-right: 10px;
     word-spacing: 1.3px;
 }
@@ -81,11 +87,11 @@ li{
     font-weight: thin;
 }
 
-a{
+.top-link{
+
     text-align: center;
     padding: 8px;
     position: relative;
-    font-family: inherit;
     display: block;
     font-weight: 400;
     line-height: 1;
@@ -96,8 +102,7 @@ a{
 
 ._phone{
     color: #00448F;
-    margin-right: 3px;
-    
+    margin-left: 24px;
 }
 
 .fa-phone{
@@ -109,10 +114,45 @@ a{
 }
 
 .number{
+    text-decoration: none;
+    padding: 8px 0;
     font-weight: 800;
     color: #00448F;
 }
 
+
+
+.bottom-header{
+    position: sticky;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: rgb(3 27 78 / 10%) 0 2px 4px;
+}
+
+.wrap-nav{
+    display: flex;
+    align-items: center;
+    padding: 0;
+}
+
+.logo-div{
+    width: 120px;
+    margin: 0 24px 0 0;
+    padding: 23px 0;
+    display: flex;
+    align-items: center;
+}
+
+.web-logo{
+    width: 9vw;
+}
+
+.a_logo{
+    width: 100px;
+}
 .web{
     font-size: 2.3rem;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -130,70 +170,64 @@ a{
     margin-left: 6px;
 }
 
-.bottom-header{
-    display: flex;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 25px 0 25px;
-    position: sticky;
-    top: 0;
-}
-
-.wrap-nav{
-    display: flex;
-    
-}
-
 .navigation{
-    position: relative;
+    line-height: 1.3rem;
+    text-align: left;
+}
+
+.main_nav{
+    flex-grow: 1;
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin-left: 30px;
 }
 
 .menu_nav{
     display: flex;
-    justify-content: center;
     align-items: center;
+    list-style: none;
+    margin: 0 0;
+    padding: 0;
 }
+
+
 
 .a_link{
-    font-weight: 500;
+    border-radius: 8px 8px 0 0;
     text-align: left;
+    display: flex;
+    align-items: center;
+    padding: 32px 30px 32px 16px;
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: -.0045em;
+    color: #222;
+    text-decoration: none;
+    cursor: pointer;
 }
+
 
 .menu_list{
-    padding-right: 10px;
+    display: inline-block;
 }
 
+
 .fa-angle-down{
-    font-size: 13px;
+    margin-left: 5px;
+    transition: 0.3s ease-in-out;
 }
 
 .menu_list:hover .fa-angle-down{
     transform: rotate(180deg);
-    transition: 0.3s ease-in-out;
+    
 }
 
-.menu_list::before{
-    content: "";
-    width: 100%;
-    height: 40vh;
-    background: #cfe5fd;
-}
-
-.button{
-    margin-left: 30px;
-}
 
 .btn{
-    background-color: #116FDA;
+    text-decoration: none;
+    background-color: #2e83e4;
     color: white;
-    width: 10vw;
-    height: 6vh;
+    width: 11vw;
+    height: 8vh;
     border-radius: 5px;
     font-weight: 600;
     display: flex;
